--- a/explore_img.html
+++ b/explore_img.html
@@ -25,13 +25,16 @@
         <!-- Fill in the content BELOW this line -->
 
         <div id="nft-marker1-info" class="info-pane" >
-            <h1>Fill in some info about this location.</h1>
+            <h1>Masks 4 Voters</h1>
+            <p>Masks 4 Voters sells face coverings to raise awareness and create donations to voter registration charities during the Covid-19 pandemic.</p>
         </div>
         <div id="nft-marker2-info" class="info-pane">
-            <h1>Fill in some info about this location.</h1>
+            <h1>Sier.ra</h1>
+            <p>Sier.ra sells hand-crafted face masks with a unique, bohemian twist.</p>
         </div>
         <div id="nft-marker3-info" class="info-pane">
-            <h1>Fill in some info about this location.</h1>
+            <h1>Lurelly</h1>
+            <p>For every mask sold, Lurelly donates 20% to directrelief.org to help them supply the necessary needs and gear to health workers everywhere.</p>
         </div>
 
         <!-- Fill in the content ABOVE this line -->
@@ -49,9 +52,9 @@
         <a-scene embedded arjs="trackingMethod: best" vr-mode-ui="enabled: false" init-img-markers>
             
             <!-- For Marker-based Tracking (url is set by JS due to a bug) -->
-            <a-nft type="nft" url="x" id="nft-marker1" data-info-pane="nft-marker1-info" data-marker-name="Old Main"></a-nft>
-            <a-nft type="nft" url="x" id="nft-marker2" data-info-pane="nft-marker2-info" data-marker-name="Hayden Library"></a-nft>
-            <a-nft type="nft" url="x" id="nft-marker3" data-info-pane="nft-marker3-info" data-marker-name="ASU Gammage"></a-nft>
+            <a-nft type="nft" url="x" id="nft-marker1" data-info-pane="nft-marker1-info" data-marker-name="Masks 4 Voters"></a-nft>
+            <a-nft type="nft" url="x" id="nft-marker2" data-info-pane="nft-marker2-info" data-marker-name="Sier.ra"></a-nft>
+            <a-nft type="nft" url="x" id="nft-marker3" data-info-pane="nft-marker3-info" data-marker-name="Lurelly"></a-nft>
             <a-entity camera rotation-reader></a-entity> 
 
         </a-scene>
