--- a/explore_loc.html
+++ b/explore_loc.html
@@ -24,13 +24,13 @@
         <!-- Fill in the content BELOW this line -->
 
         <div id="nft-marker1-info" class="info-pane" >
-            <h1>Fill in some info about this location.</h1>
+            <h1>Masks4Voters</h1>
         </div>
         <div id="nft-marker2-info" class="info-pane">
-            <h1>Fill in some info about this location.</h1>
+            <h1>Sier.ra</h1>
         </div>
         <div id="nft-marker3-info" class="info-pane">
-            <h1>Fill in some info about this location.</h1>
+            <h1>Lurelly</h1>
         </div>
 
         <!-- Fill in the content ABOVE this line -->
